--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nova Bootstrap Template - Team</title>
+  <title>L'équipe</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -73,10 +73,10 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/cheve.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center">
 
-        <h2>Team</h2>
+        <h2>équipe</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Team</li>
+          <li><a href="index.html">Acceuil</a></li>
+          <li>équipe</li>
         </ol>
 
       </div>
@@ -87,7 +87,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Team</h2>
+          <h2>Notre équipe</h2>
 
         </div>
 
@@ -96,7 +96,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/gouverneur.jpeg" class="img-fluid" alt="" style="height: 43vh;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -105,8 +105,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Héribert-Label Élisée ADJOVI</h4>
+                <span>ADMINISTRATION CENTRALE GOUVERNEUR</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -114,7 +114,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/redacteur.jpeg" class="img-fluid" alt="" style="height: 43vh;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -124,7 +124,7 @@
               </div>
               <div class="member-info">
                 <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <span>RÉDACTEUR EN CHEF</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -132,7 +132,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/reporteur.jpeg" class="img-fluid" alt="" style="height: 43vh;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -142,7 +142,7 @@
               </div>
               <div class="member-info">
                 <h4>William Anderson</h4>
-                <span>CTO</span>
+                <span>GRANDS REPORTERS</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -150,7 +150,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/chargé.jpeg" class="img-fluid" alt="" style="height: 43vh;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -160,7 +160,7 @@
               </div>
               <div class="member-info">
                 <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <span>CHARGÉS DE MISSION</span>
               </div>
             </div>
           </div><!-- End Team Member -->
