--- a/team.html
+++ b/team.html
@@ -96,7 +96,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/gouverneur.jpeg" class="img-fluid" alt="" style="height: 43vh;">
+                <img src="assets/img/team/gouverneur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -114,7 +114,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/redacteur.jpeg" class="img-fluid" alt="" style="height: 43vh;">
+                <img src="assets/img/team/redacteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -132,7 +132,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/reporteur.jpeg" class="img-fluid" alt="" style="height: 43vh;">
+                <img src="assets/img/team/reporteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -150,7 +150,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/chargé.jpeg" class="img-fluid" alt="" style="height: 43vh;">
+                <img src="assets/img/team/chargé.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
