--- a/team.html
+++ b/team.html
@@ -123,7 +123,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Émmanuel MAYEGA</h4>
                 <span>RÉDACTEUR EN CHEF</span>
               </div>
             </div>
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
+                <h4>Hannah N. GETERMINAH</h4>
                 <span>GRANDS REPORTERS</span>
               </div>
             </div>
@@ -159,11 +159,31 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
+                <h4>Élisabeth ASEN SOMO</h4>
                 <span>CHARGÉS DE MISSION</span>
               </div>
             </div>
           </div><!-- End Team Member -->
+          <div></div><br>
+          <div class="row">
+            <div class="col-lg-12 col-md-6" data-aos="fade-up" data-aos-delay="300">
+              <div class="team-member">
+                <div class="member-img">
+                  <img src="assets/img/team/and.jpeg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Jacques ADANDÉ</h4>
+                  <span>De la 1ère Promotion des diplomates de carrière du Bénin/ Fonctionnaire des Nations Unies à la retraite.</span>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+          </div>
 
         </div>
 
