--- a/team.html
+++ b/team.html
@@ -199,10 +199,10 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <!-- <a href="index.html" class="logo d-flex align-items-center">
               <span style="color: #e1e6ec;">Le label diplomatique</span>
-            </a>
-            <p style="color: #e1e6ec;">"Le Label Diplomatique", Unir l'Afrique et ses diasporas !</p>
+            </a>-->
+            <p style="color: #e1e6ec;"><strong >Le Label Diplomatique</strong> , Unir l'Afrique et ses diasporas !</p>
             <div class="social-links d-flex  mt-3">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
