order team change

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <p>Nous voulons être présent à l'Union africaine, aux Nations Unies et partout où le sort de l'Afrique est en cause, et influencer le choix des personnalités devant être Chef de la diplomatie au sein des États Africains ainsi que dans l'État de la Diaspora Africaine. </p>
           </blockquote>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#about" class="btn-get-started">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="#why-us" class="btn-get-started">Commencer</a>
+            <a href="https://www.youtube.com/watch?v=FQoEgoKV_ww" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Regarder la vidéo</span></a>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
                   <div class="item">
                     <h3 class="mb-3">Le Magazine panafricain</h3>
                     <!---<h4 class="mb-3">Optio reiciendis accusantium iusto architecto at quia minima maiores quidem, dolorum.</h4>-->
-                    <p> Il est entièrement dédié à la Diplomatie et aux Relations Internationales dénommé "Le Label Diplomatique" qui vise à déconstruire les fakes news des grandes puissances sur l'Afrique et révéler le vrai visage du "Berceau de l'humanité", à travers les hommes, les femmes et les jeunes qui travaillent à lui faire reprendre toute sa place dans le Concert des Nations.</p>
+                    <p> Il est entièrement dédié à la Diplomatie et aux Relations Internationales qui vise à déconstruire les fakes news des grandes puissances sur l'Afrique et révéler le vrai visage du "Berceau de l'humanité", à travers les hommes, les femmes et les jeunes qui travaillent à lui faire reprendre toute sa place dans le Concert des Nations.</p>
                   </div>
                 </div><!-- End slide item -->
 
@@ -112,7 +112,7 @@
                   <div class="item">
                     <h3 class="mb-3">Notre objectif</h3>
                     <!--<h4 class="mb-3">Necessitatibus voluptatibus explicabo dolores a vitae voluptatum.</h4>-->
-                    <p>Dans les cinq (5) prochaines années, nous entendons travailler à davantage faire connaître toutes les bonnes initiatives qui propulsent le développement de l'Afrique et ceci à travers l'Etat de la Diaspora Africaine ainsi que des 54 États Africains. </p>
+                  <p>Dans les cinq (5) prochaines années, nous entendons travailler à davantage faire connaître toutes les bonnes initiatives qui propulsent le développement de l'Afrique et ceci à travers l'Etat de la Diaspora Africaine ainsi que (l)es 54 États Africains</p>
                   </div>
                 </div><!-- End slide item -->
 
@@ -120,7 +120,7 @@
                   <div class="item">
                     <h3 class="mb-3">Comment y arriver ?</h3>
                     <!--<h4 class="mb-3">Tempora quos est ut quia adipisci ut voluptas. Deleniti laborum soluta nihil est. Eum similique neque autem ut.</h4>-->
-                    <p>Nous voulons être présent à l'Union africaine, aux Nations Unies et partout où le sort de l'Afrique est en cause, et influencer le choix des personnalités devant être Chef de la diplomatie au sein des États Africains ainsi que dans l'État de la Diaspora Africaine.</p>
+                    <p>Nous voulons être présent à l'Union africaine, aux Nations Unies et partout où le sort de l'Afrique est en jeu, et influencer la politique étrangère des États Africains, de l'État de la Diaspora Africaine ainsi que la politique africaine des autres acteurs de la scène internationale.</p>
                   </div>
                 </div><!-- End slide item -->
 
