--- a/interviews.html
+++ b/interviews.html
@@ -56,7 +56,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" >Acceuil</a></li>
+          <li><a href="index.html" >Accueil</a></li>
           <li><a href="index.html#why-us">Apropos</a></li>
           <!-- .navbar <li><a href="services.html">Services</a></li>-->
           <li><a href="interviews.html" class="active">Nos interventions</a></li>
@@ -77,7 +77,7 @@
 
         <h2>Interviews</h2>
         <ol>
-          <li><a href="index.html">Acceuil</a></li>
+          <li><a href="index.html">accueil</a></li>
           <li>Interviews</li>
         </ol>
 
@@ -226,7 +226,7 @@
           <div class="col-lg-3 col-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Acceuil</a></li>
+              <li><i class="bi bi-dash"></i> <a href="#">Accueil</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Nos interventions</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">L'équipe</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
