--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" >Acceuil</a></li>
+          <li><a href="index.html" >Accueil</a></li>
           <li><a href="index.html#why-us">Apropos</a></li>
           <!-- .navbar <li><a href="services.html">Services</a></li>-->
           <li><a href="interviews.html">Nos interventions</a></li>
@@ -75,7 +75,7 @@
 
         <h2>équipe</h2>
         <ol>
-          <li><a href="index.html">Acceuil</a></li>
+          <li><a href="index.html">accueil</a></li>
           <li>équipe</li>
         </ol>
 
@@ -84,13 +84,13 @@
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>Notre équipe</h2>
-
-        </div>
-
+      <div class="section-header">
+        <h2>Notre équipe</h2>
+      </div><div></div><br><br>
+      <div class="container" data-aos="fade-up" style="  display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;">
         <div class="row gy-4">
 
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -114,7 +114,7 @@
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/redacteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
+                <img src="assets/img/team/and.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -123,30 +123,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Émmanuel MAYEGA</h4>
-                <span>RÉDACTEUR EN CHEF</span>
+                <h4>Jacques ADANDÉ</h4>
+                  <span>De la 1ère Promotion des diplomates de carrière du Bénin/ Fonctionnaire des Nations Unies à la retraite.</span>
+
               </div>
             </div>
           </div><!-- End Team Member -->
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/team/reporteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Hannah N. GETERMINAH</h4>
-                <span>GRANDS REPORTERS</span>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
+          
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
@@ -164,12 +147,11 @@
               </div>
             </div>
           </div><!-- End Team Member -->
-          <div></div><br>
-          <div class="row">
-            <div class="col-lg-12 col-md-6" data-aos="fade-up" data-aos-delay="300">
+
+            <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
               <div class="team-member">
                 <div class="member-img">
-                  <img src="assets/img/team/and.jpeg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
+                  <img src="assets/img/team/redacteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -178,8 +160,26 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Jacques ADANDÉ</h4>
-                  <span>De la 1ère Promotion des diplomates de carrière du Bénin/ Fonctionnaire des Nations Unies à la retraite.</span>
+                  <h4>Émmanuel MAYEGA</h4>
+                  <span>RÉDACTEUR EN CHEF</span>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+            <div></div>
+            <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300" style="width: 25%; margin: 0 auto;">
+              <div class="team-member">
+                <div class="member-img">
+                  <img src="assets/img/team/reporteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Hannah N. GETERMINAH</h4>
+                  <span>GRANDS REPORTERS</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -214,7 +214,7 @@
           <div class="col-lg-3 col-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Acceuil</a></li>
+              <li><i class="bi bi-dash"></i> <a href="#">accueil</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Nos interventions</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">L'équipe</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
