--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Acceuil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="index.html#why-us">Apropos</a></li>
           <!-- .navbar <li><a href="services.html">Services</a></li>-->
           <li><a href="interviews.html">Nos interventions</a></li>
@@ -75,7 +75,7 @@
 
         <h2>Contact</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li>Contact</li>
         </ol>
 
@@ -173,7 +173,7 @@
           <div class="col-lg-3 col-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Acceuil</a></li>
+              <li><i class="bi bi-dash"></i> <a href="#">Accueil</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Nos interventions</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">L'équipe</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
