--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-xl-4">
           <h2 data-aos="fade-up">Le label Diplomatique</h2>
           <blockquote data-aos="fade-up" data-aos-delay="100">
-            <p>Nous voulons être présent à l'Union africaine, aux Nations Unies et partout où le sort de l'Afrique est en cause, et influencer le choix des personnalités devant être Chef de la diplomatie au sein des États Africains ainsi que dans l'État de la Diaspora Africaine. </p>
+            <p>Nous voulons être présent à l'Union africaine, aux Nations Unies et partout où le sort de l'Afrique est en jeu, et influencer la politique étrangère des États Africains, de l'État de la Diaspora Africaine ainsi que la politique africaine des autres acteurs de la scène internationale.</p>
           </blockquote>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="#why-us" class="btn-get-started">Commencer</a>
