--- a/team.html
+++ b/team.html
@@ -87,10 +87,7 @@
       <div class="section-header">
         <h2>Notre équipe</h2>
       </div><div></div><br><br>
-      <div class="container" data-aos="fade-up" style="  display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;">
+      <div class="container" data-aos="fade-up">
         <div class="row gy-4">
 
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -166,7 +163,7 @@
               </div>
             </div><!-- End Team Member -->
             <div></div>
-            <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300" style="width: 25%; margin: 0 auto;">
+            <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300" style="width: 53vh; margin: 0 auto;">
               <div class="team-member">
                 <div class="member-img">
                   <img src="assets/img/team/reporteur.jpeg" class="img-fluid" alt="" style="height: 43vh; width: 100%;">
