--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Acceuil</a></li>
-          <li><a href="#why-us">Apropos</a></li>
+          <li><a href="index.html" class="active">Accueil</a></li>
+          <li><a href="#why-us">À propos</a></li>
           <!-- .navbar <li><a href="services.html">Services</a></li>-->
           <li><a href="interviews.html">Nos interventions</a></li>
           <!--<li><a href="portfolio.html">Blog</a></li>-->
@@ -102,7 +102,8 @@
                   <div class="item">
                     <h3 class="mb-3">Le Magazine panafricain</h3>
                     <!---<h4 class="mb-3">Optio reiciendis accusantium iusto architecto at quia minima maiores quidem, dolorum.</h4>-->
-                    <p> Il est entièrement dédié à la Diplomatie et aux Relations Internationales qui vise à déconstruire les fakes news des grandes puissances sur l'Afrique et révéler le vrai visage du "Berceau de l'humanité", à travers les hommes, les femmes et les jeunes qui travaillent à lui faire reprendre toute sa place dans le Concert des Nations.</p>
+                    <p>
+                      "Le Label Diplomatique" est entièrement dédié à la Diplomatie et aux Relations Internationales et vise à déconstruire les fakes news des grandes puissances sur l'Afrique et révéler le vrai visage du "Berceau de l'humanité", à travers les hommes, les femmes et les jeunes qui travaillent à lui faire reprendre toute sa place dans le Concert des Nations.</p>
                   </div>
                 </div><!-- End slide item -->
 
@@ -112,7 +113,7 @@
                   <div class="item">
                     <h3 class="mb-3">Notre objectif</h3>
                     <!--<h4 class="mb-3">Necessitatibus voluptatibus explicabo dolores a vitae voluptatum.</h4>-->
-                  <p>Dans les cinq (5) prochaines années, nous entendons travailler à davantage faire connaître toutes les bonnes initiatives qui propulsent le développement de l'Afrique et ceci à travers l'Etat de la Diaspora Africaine ainsi que (l)es 54 États Africains</p>
+                  <p>Dans les cinq (5) prochaines années, nous entendons travailler à davantage faire connaître toutes les bonnes initiatives qui propulsent le développement de l'Afrique et ceci à travers l'Etat de la Diaspora Africaine ainsi que les 54 États Africains</p>
                   </div>
                 </div><!-- End slide item -->
 
@@ -398,7 +399,7 @@
           <div class="col-lg-3 col-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Acceuil</a></li>
+              <li><i class="bi bi-dash"></i> <a href="#">Accueil</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Nos interventions</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">L'équipe</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
