--- a/team.html
+++ b/team.html
@@ -55,7 +55,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" >Accueil</a></li>
-          <li><a href="index.html#why-us">Apropos</a></li>
+          <li><a href="index.html#why-us">À propos</a></li>
           <!-- .navbar <li><a href="services.html">Services</a></li>-->
           <li><a href="interviews.html">Nos interventions</a></li>
           <!--<li><a href="portfolio.html">Blog</a></li>-->
@@ -103,7 +103,7 @@
               </div>
               <div class="member-info">
                 <h4>Héribert-Label Élisée ADJOVI</h4>
-                <span>ADMINISTRATION CENTRALE GOUVERNEUR</span>
+                <span>GOUVERNEUR</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -121,7 +121,7 @@
               </div>
               <div class="member-info">
                 <h4>Jacques ADANDÉ</h4>
-                  <span>De la 1ère Promotion des diplomates de carrière du Bénin/ Fonctionnaire des Nations Unies à la retraite.</span>
+                  <span>Conseiller spécial/Ambassadeur / Fonctionnaire des Nations Unies à la retraite.</span>
 
               </div>
             </div>
@@ -140,10 +140,13 @@
               </div>
               <div class="member-info">
                 <h4>Élisabeth ASEN SOMO</h4>
-                <span>CHARGÉS DE MISSION</span>
+                <span>CHARGÉE DE MISSION</span>
               </div>
             </div>
           </div><!-- End Team Member -->
+          <div class="row">
+            
+          </div>
 
             <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
               <div class="team-member">
@@ -176,7 +179,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Hannah N. GETERMINAH</h4>
-                  <span>GRANDS REPORTERS</span>
+                  <span>GRAND REPORTER</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -211,7 +214,7 @@
           <div class="col-lg-3 col-6 footer-links">
             <h4>Liens utiles</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">accueil</a></li>
+              <li><i class="bi bi-dash"></i> <a href="#">Accueil</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Nos interventions</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">L'équipe</a></li>
               <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
