--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" style="">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="index.html#why-us">À propos</a></li>
           <!-- .navbar <li><a href="services.html">Services</a></li>-->
           <li><a href="interviews.html">Nos interventions</a></li>
