--- a/interviews.html
+++ b/interviews.html
@@ -455,14 +455,14 @@
                   </div>
 
                   <div class="content">
-                    <p style="width:60%; height: 70vh; text-align: justify;">
+                    <p style="width:60%; text-align: justify;">
                       ${k.Genboxtextarea}
                     </p>
-                  </div>
-
-                  <div class="read-more mt-auto align-self-end">
+                    <div class="read-more mt-auto align-self-end">
                     <a href="https://lelabeldiplomatique.com/d/HA1679231075.95664170863e96670.29607395">En savoir plus sur les magazines <i class="bi bi-arrow-right"></i></a>
                   </div>   
+                  </div>
+
 
                 </article>
                 <!-- End post list item -->            
